config/samples/demo_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: global-demo
  namespace: global-demo
spec:
  gatewayClassName: global-istio
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: global-demo
  namespace: global-demo
spec:
  parentRefs:
  - name: global-demo
  rules:
  - backendRefs:
    - name: global-demo
      port: 80
